# kddcup2024-oag-challenge-pst-9th-solution-nttdocomolabz

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
ensemble/: ensemble_oag_clean.ipynb
first_stage/: cross_encoder.py
preprocess/: Fill_paper_info_by_OAG.ipynb  oagbert_title_gen.py  process_kddcup_data.py  xml_parser.py
second_stage/: OAGBERT_embedding_cossim.ipynb  classifier.py  classifier_weight.py  dblp_feature.py  dblp_feature2.py  feature_generate4.ipynb  feature_generate5_feature_without_emb.ipynb  feature_generate6_with_oag.ipynb  feature_post_process.ipynb  oagbert.py  scibert_encode_3.py  util.py
